0031217: start testing bug